@@ -19,6 +19,7 @@ The following list contains all changes to pgAdmin III, as present in svn.
 </ul>
 <br>
 <ul>
+    <li>2006-05-02 DP  1.4.3  Add an accelerator key (Delete) for deleting rows in the edit grid, per Emil Nowak.
     <li>2006-04-28 DP  1.4.3  Ensure the user is warned if files cannot be written.
     <li>2006-03-20 DP  1.4.3  Install PkgInfo into the Contents directory in the OSX appbundle, per John DeSoi.
     <li>2006-03-20 DP  1.4.3  Detect and correctly use GNU vs. BSD xargs when completing an appbundle install, per John DeSoi.
